--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -20,7 +20,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from collections import OrderedDict"
    ]
   },
   {
@@ -45,17 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "55fa7e85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scaled_dot_product_attention(q, k, v, mask=None): # q,k[B, nheads, seq_len, depth]\n",
+    "def scaled_dot_product_attention(q, k, v, attn_mask=None): # q,k[B, nheads, seq_len, depth]\n",
     "    depth = q.size(-1)\n",
     "    scale = depth**-0.5\n",
     "    q = q*scale\n",
     "\n",
     "    attn = torch.matmul(q, k.transpose(-2,-1)) # [B, nheads, seq_len_q, seq_len_k]\n",
+    "    if mask is not None:\n",
+    "        attn += attn_mask\n",
     "    attn = attn.softmax(dim=-1)\n",
     "    # dropout\n",
     "    out = torch.matmul(attn, v)    # [B, nheads, seq_len_q, depth_v]\n",
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "id": "6d5175d6",
    "metadata": {},
    "outputs": [],
@@ -78,7 +81,7 @@
     "        self.vw = nn.Linear(emb_dim, emb_dim)\n",
     "        self.out_proj = nn.Linear(emb_dim, emb_dim)\n",
     "\n",
-    "    def forward(self, query, key, value):   # [B, seq_len, emb_dim]\n",
+    "    def forward(self, query, key, value, attn_mask=None):   # [B, seq_len, emb_dim]\n",
     "        batch_size, seq_len, emb_dim = query.shape\n",
     "        q,k,v = self.qw(query), self.kw(key), self.vw(value) # [B, seq_len, emb_dim]\n",
     "        \n",
@@ -90,7 +93,7 @@
     "        k = k.transpose(-2,-3)\n",
     "        v = v.transpose(-2,-3)  # [B, nheads, seq_len, depth]\n",
     "        \n",
-    "        out, attn = scaled_dot_product_attention(q,k,v)   # [B, nheads, seq_len, depth]\n",
+    "        out, attn = scaled_dot_product_attention(q,k,v,attn_mask)   # [B, nheads, seq_len, depth]\n",
     "        \n",
     "        out = out.transpose(-2,-3)  # [B, seq_len, nheads, depth]\n",
     "        \n",
@@ -101,57 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "id": "1e1b226b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def scaled_dot_product_attention(q, k, v, mask=None): # q,k[B, nheads, depth, seq_len]\n",
-    "    depth = q.size(-1)\n",
-    "    scale = depth**-0.5\n",
-    "    q = q*scale\n",
-    "\n",
-    "    attn = torch.matmul(q.transpose(-2,-1), k) # [B, nheads, seq_len_q, seq_len_k]\n",
-    "    attn = attn.softmax(dim=-1)\n",
-    "    # dropout\n",
-    "    out = torch.matmul(v, attn.transpose(-2,-1))    # [B, nheads, depth_v, seq_len_q]\n",
-    "    return out, attn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "c238d598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class mha(nn.Module):  # multi headed attention\n",
-    "    def __init__(self, emb_dim=512, nheads=8):\n",
-    "        super().__init__()\n",
-    "        self.nheads = nheads\n",
-    "        self.qw = nn.Conv1d(emb_dim, emb_dim, kernel_size=1)\n",
-    "        self.kw = nn.Conv1d(emb_dim, emb_dim, kernel_size=1)\n",
-    "        self.vw = nn.Conv1d(emb_dim, emb_dim, kernel_size=1)\n",
-    "        self.out_proj = nn.Conv1d(emb_dim, emb_dim, kernel_size=1)\n",
-    "\n",
-    "    def forward(self, query, key, value):   # [B, emb_dim, seq_len]\n",
-    "        batch_size, emb_dim, seq_len,  = query.shape\n",
-    "        q,k,v = self.qw(query), self.kw(key), self.vw(value) # [B, emb_dim, seq_len]\n",
-    "\n",
-    "        q = q.view(batch_size, self.nheads, -1, seq_len)\n",
-    "        k = k.view_as(q)\n",
-    "        v = v.view_as(q)     # [B, nheads, depth, seq_len]\n",
-    "\n",
-    "        out, attn = scaled_dot_product_attention(q,k,v)   # [B, nheads, depth, seq_len]\n",
-    "        \n",
-    "        out = out.reshape(batch_size, -1, seq_len)\n",
-    "        out = self.out_proj(out)\n",
-    "        return out, attn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "id": "38d444bd",
    "metadata": {},
    "outputs": [],
@@ -161,39 +114,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 7,
    "id": "360e40e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.randn(8, 512, 64)#.to(device)"
+    "x = torch.randn(8, 64, 512)#.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 8,
    "id": "6179b974",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.61 ms ± 47.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(torch.Size([8, 64, 512]), torch.Size([8, 64, 64]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit\n",
+    "# %%timeit\n",
     "out, attn = atn(x,x,x)\n",
     "out.shape, attn.mean(dim=1).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "3152ace9",
    "metadata": {},
    "outputs": [],
@@ -203,31 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "236431c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[torch.Size([1536, 512]),\n",
-       " torch.Size([1536]),\n",
-       " torch.Size([512, 512]),\n",
-       " torch.Size([512])]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[w.shape for w in tmha.parameters()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6c168b6e",
    "metadata": {},
    "outputs": [
@@ -237,7 +169,7 @@
        "torch.Size([64, 8, 512])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,64 +181,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fabff591",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    for w,nw in zip(tmha.parameters(), atn.parameters()):\n",
-    "        w.copy_(nw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "id": "4f0f079c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.3 ms ± 273 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 8, 512]), torch.Size([8, 64, 64]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit\n",
+    "# %%timeit\n",
     "o,a = tmha(y,y,y)\n",
     "o.shape, a.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "865bf6e1",
+   "execution_count": 30,
+   "id": "0dea63be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(True)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(o == out.transpose(1,0)).all()"
+    "def get_ffn(d_model, dp_rate=0.1):\n",
+    "    return nn.Sequential(OrderedDict([\n",
+    "            ('lin1', nn.Linear(d_model, d_model*4)),\n",
+    "            ('activation', nn.ReLU()),\n",
+    "            ('dropout', nn.Dropout(dp_rate)),\n",
+    "            ('lin2', nn.Linear(d_model*4, d_model))\n",
+    "        ]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c3489d0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerEncoderLayer(nn.Module):\n",
+    "    def __init__(self, d_model=512, nheads=8, dp_rate=0.1):\n",
+    "        super().__init__()\n",
+    "        self.attn = mha(emb_dim=d_model, nheads=nheads)\n",
+    "        self.dropout1 = nn.Dropout(dp_rate)\n",
+    "        self.ln1 = nn.LayerNorm(d_model)\n",
+    "        self.ffn = get_ffn(d_model, dp_rate)\n",
+    "        self.dropout2 = nn.Dropout(dp_rate)\n",
+    "        self.ln2 = nn.LayerNorm(d_model)\n",
+    "\n",
+    "    def forward(self, x, attn_mask=None):   # [B, seq_len, d_model]\n",
+    "        x = self.ln1(x + self.dropout1(self.attn(x,x,x, attn_mask=attn_mask)[0]))\n",
+    "        x = self.ln2(x + self.dropout2(self.ffn(x)))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "16f3ae37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerDecoderLayer(nn.Module):\n",
+    "    def __init__(self, d_model=512, nheads=8, dp_rate=0.1):\n",
+    "        super().__init__()\n",
+    "        self.attn1 = mha(emb_dim=d_model, nheads=nheads)\n",
+    "        self.dropout1 = nn.Dropout(dp_rate)\n",
+    "        self.ln1 = nn.LayerNorm(d_model)\n",
+    "\n",
+    "        self.attn2 = mha(emb_dim=d_model, nheads=nheads)\n",
+    "        self.dropout2 = nn.Dropout(dp_rate)\n",
+    "        self.ln2 = nn.LayerNorm(d_model)\n",
+    "\n",
+    "        self.ffn = get_ffn(d_model, dp_rate)\n",
+    "        self.dropout3 = nn.Dropout(dp_rate)\n",
+    "        self.ln3 = nn.LayerNorm(d_model)\n",
+    "    \n",
+    "    def forward(self, x, enc_output, attn_mask=None, memory_mask=None, padding_mask=None):   # [B, seq_len, d_model]\n",
+    "        x = self.ln1(x + self.dropout1(self.attn1(x,x,x, attn_mask=attn_mask)[0]))\n",
+    "        x = self.ln1(x + self.dropout1(self.attn2(x, enc_output, enc_output, attn_mask=padding_mask)[0]))\n",
+    "        x = self.ln2(x + self.dropout2(self.ffn(x)))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "78c5e19b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "te = TransformerEncoderLayer()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3489d0e",
+   "id": "e33ad17b",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac93985d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reset_parameters(self):\n",
+    "    for p in self.parameters():\n",
+    "        if p.dim() > 1:\n",
+    "            nn.init.xavier_uniform_(p)"
+   ]
   }
  ],
  "metadata": {
