--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "55fa7e85",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
     "    q = q*scale\n",
     "\n",
     "    attn = torch.matmul(q, k.transpose(-2,-1)) # [B, nheads, seq_len_q, seq_len_k]\n",
-    "    if mask is not None:\n",
+    "    if attn_mask is not None:\n",
     "        attn += attn_mask\n",
     "    attn = attn.softmax(dim=-1)\n",
     "    # dropout\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "6d5175d6",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "38d444bd",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "360e40e3",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6179b974",
    "metadata": {
     "scrolled": true
@@ -136,7 +136,7 @@
        "(torch.Size([8, 64, 512]), torch.Size([8, 64, 64]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "3152ace9",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "6c168b6e",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "torch.Size([64, 8, 512])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "4f0f079c",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "(torch.Size([64, 8, 512]), torch.Size([8, 64, 64]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "0dea63be",
    "metadata": {},
    "outputs": [],
