transformer layer almost done

--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -87,7 +87,7 @@
     "        \n",
     "        q = q.view(batch_size, seq_len, self.nheads, -1)\n",
     "        k = k.view_as(q)\n",
-    "        v = v.view_as(q)     # [B, seq_len, nheads, depth]\n",
+    "        v = v.view_as(q)     # [B, seq_len, nheads, depth]   # emb_dim = nheads * depth\n",
     "        \n",
     "        q = q.transpose(-2,-3)\n",
     "        k = k.transpose(-2,-3)\n",
@@ -97,109 +97,9 @@
     "        \n",
     "        out = out.transpose(-2,-3)  # [B, seq_len, nheads, depth]\n",
     "        \n",
-    "        out = out.reshape(batch_size, seq_len, -1)\n",
-    "        out = self.out_proj(out)\n",
+    "        out = out.reshape(batch_size, seq_len, -1)  # [B, seq_len, emb_dim]\n",
+    "        out = self.out_proj(out)     # [B, seq_len, emb_dim]\n",
     "        return out, attn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "38d444bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "atn = mha(emb_dim=512)#.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "360e40e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = torch.randn(8, 64, 512)#.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "6179b974",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([8, 64, 512]), torch.Size([8, 64, 64]))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# %%timeit\n",
-    "out, attn = atn(x,x,x)\n",
-    "out.shape, attn.mean(dim=1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3152ace9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmha = nn.MultiheadAttention(embed_dim=512, num_heads=8)#.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6c168b6e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([64, 8, 512])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y = x.transpose(1,0)\n",
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "4f0f079c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([64, 8, 512]), torch.Size([8, 64, 64]))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# %%timeit\n",
-    "o,a = tmha(y,y,y)\n",
-    "o.shape, a.shape"
    ]
   },
   {
@@ -209,10 +109,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_ffn(d_model, dp_rate=0.1):\n",
+    "def get_ffn(d_model, dp_rate=0.1, activation='relu'):\n",
+    "    if activation == 'relu':\n",
+    "        act_l = nn.ReLU()\n",
+    "    elif activation == 'gelu':\n",
+    "        act_l = nn.GELU()\n",
     "    return nn.Sequential(OrderedDict([\n",
     "            ('lin1', nn.Linear(d_model, d_model*4)),\n",
-    "            ('activation', nn.ReLU()),\n",
+    "            ('activation', act_l),\n",
     "            ('dropout', nn.Dropout(dp_rate)),\n",
     "            ('lin2', nn.Linear(d_model*4, d_model))\n",
     "        ]))"
@@ -220,36 +124,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "c3489d0e",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerEncoderLayer(nn.Module):\n",
-    "    def __init__(self, d_model=512, nheads=8, dp_rate=0.1):\n",
+    "    def __init__(self, d_model=512, nheads=8, dp_rate=0.1, activation='relu'):\n",
     "        super().__init__()\n",
     "        self.attn = mha(emb_dim=d_model, nheads=nheads)\n",
     "        self.dropout1 = nn.Dropout(dp_rate)\n",
     "        self.ln1 = nn.LayerNorm(d_model)\n",
-    "        self.ffn = get_ffn(d_model, dp_rate)\n",
+    "        self.ffn = get_ffn(d_model, dp_rate, activation)\n",
     "        self.dropout2 = nn.Dropout(dp_rate)\n",
     "        self.ln2 = nn.LayerNorm(d_model)\n",
     "\n",
     "    def forward(self, x, attn_mask=None):   # [B, seq_len, d_model]\n",
-    "        x = self.ln1(x + self.dropout1(self.attn(x,x,x, attn_mask=attn_mask)[0]))\n",
+    "        x = self.ln1(x + self.dropout1(self.attn(x,x,x, attn_mask)[0]))\n",
     "        x = self.ln2(x + self.dropout2(self.ffn(x)))\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "16f3ae37",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerDecoderLayer(nn.Module):\n",
-    "    def __init__(self, d_model=512, nheads=8, dp_rate=0.1):\n",
+    "    def __init__(self, d_model=512, nheads=8, dp_rate=0.1, activation='relu'):\n",
     "        super().__init__()\n",
     "        self.attn1 = mha(emb_dim=d_model, nheads=nheads)\n",
     "        self.dropout1 = nn.Dropout(dp_rate)\n",
@@ -259,25 +163,87 @@
     "        self.dropout2 = nn.Dropout(dp_rate)\n",
     "        self.ln2 = nn.LayerNorm(d_model)\n",
     "\n",
-    "        self.ffn = get_ffn(d_model, dp_rate)\n",
+    "        self.ffn = get_ffn(d_model, dp_rate, activation)\n",
     "        self.dropout3 = nn.Dropout(dp_rate)\n",
     "        self.ln3 = nn.LayerNorm(d_model)\n",
     "    \n",
-    "    def forward(self, x, enc_output, attn_mask=None, memory_mask=None, padding_mask=None):   # [B, seq_len, d_model]\n",
-    "        x = self.ln1(x + self.dropout1(self.attn1(x,x,x, attn_mask=attn_mask)[0]))\n",
-    "        x = self.ln1(x + self.dropout1(self.attn2(x, enc_output, enc_output, attn_mask=padding_mask)[0]))\n",
+    "    def forward(self, x, enc_output, attn_mask=None, padding_mask=None):   # [B, seq_len, d_model]\n",
+    "        x = self.ln1(x + self.dropout1(self.attn1(x,x,x, attn_mask)[0]))\n",
+    "        x = self.ln1(x + self.dropout1(self.attn2(x,enc_output,enc_output, padding_mask)[0]))\n",
     "        x = self.ln2(x + self.dropout2(self.ffn(x)))\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "78c5e19b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "te = TransformerEncoderLayer()"
+    "class TransformerEncoder(nn.Module):\n",
+    "    def __init__(self, src_vocab_size, nlayers=6, d_model=512, nheads=8, dp_rate=0.1, activation='relu'):\n",
+    "        super().__init__()\n",
+    "        self.embedding = nn.Embedding(src_vocab_size, d_model)\n",
+    "        self.enc_layers = nn.ModuleList([TransformerEncoderLayer(d_model, nheads, dp_rate, activation)\n",
+    "                                         for _ in range(nlayers)])\n",
+    "    \n",
+    "    def forward(self, x, attn_mask=None):\n",
+    "        x = self.embedding(x)\n",
+    "        x+= self.pos_enc\n",
+    "        for lyr in self.enc_layers:\n",
+    "            x = lyr(x, attn_mask)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7b8c16d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerDecoder(nn.Module):\n",
+    "    def __init__(self, tgt_vocab_size, nlayers=6, d_model=512, nheads=8, dp_rate=0.1, activation='relu'):\n",
+    "        super().__init__()\n",
+    "        self.embedding = nn.Embedding(tgt_vocab_size, d_model)\n",
+    "        self.dec_layers = nn.ModuleList([TransformerDecoderLayer(d_model, nheads, dp_rate, activation)\n",
+    "                                         for _ in range(nlayers)])\n",
+    "    \n",
+    "    def forward(self, x, enc_output, attn_mask=None, padding_mask=None):\n",
+    "        x = self.embedding(x)\n",
+    "        x+= self.pos_enc\n",
+    "        for lyr in self.dec_layers:\n",
+    "            x = lyr(x, enc_output, attn_mask, padding_mask)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b58d713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, src_vocab_size, tgt_vocab_size, d_model=512,\n",
+    "                 nheads=8, nlayers=6, dp_rate=0.1, activation='relu'):\n",
+    "        super().__init__()\n",
+    "        self.encoder = TransformerEncoder(src_vocab_size, nlayers, d_model, nheads, dp_rate, activation)\n",
+    "        self.decoder = TransformerDecoder(tgt_vocab_size, nlayers, d_model, nheads, dp_rate, activation)\n",
+    "        self.fout = nn.Linear(d_model, tgt_vocab_size)\n",
+    "        self.reset_parameters()\n",
+    "\n",
+    "    def reset_parameters(self):\n",
+    "        for p in self.parameters():\n",
+    "            if p.dim() > 1:\n",
+    "                nn.init.xavier_uniform_(p)\n",
+    "    \n",
+    "    def forward(self, src, tgt, attn_mask=None, padding_mask=None):\n",
+    "        x = self.encoder(src, attn_mask)\n",
+    "        x = self.decoder(tgt, x, attn_mask, padding_mask)\n",
+    "        x = self.fout(x)\n",
+    "        return x"
    ]
   },
   {
@@ -290,16 +256,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ac93985d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def reset_parameters(self):\n",
-    "    for p in self.parameters():\n",
-    "        if p.dim() > 1:\n",
-    "            nn.init.xavier_uniform_(p)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdbf2c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
