--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -153,6 +153,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0695bbc2-eb41-43b6-bcb4-4033698b27ca",
+   "metadata": {},
+   "source": [
+    "![multi_head_attention](img/multi_head_attention.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "6d5175d6",
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "c3489d0e",
    "metadata": {},
    "outputs": [],
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "16f3ae37",
    "metadata": {},
    "outputs": [],
@@ -274,14 +282,14 @@
     "    \n",
     "    def forward(self, x, enc_output, attn_mask=None, padding_mask=None):   # [B, seq_len, d_model]\n",
     "        x = self.ln1(x + self.dropout1(self.attn1(x,x,x, attn_mask)[0]))\n",
-    "        x = self.ln1(x + self.dropout1(self.attn2(x,enc_output,enc_output, padding_mask)[0]))\n",
-    "        x = self.ln2(x + self.dropout2(self.ffn(x)))\n",
+    "        x = self.ln2(x + self.dropout2(self.attn2(x,enc_output,enc_output, padding_mask)[0]))\n",
+    "        x = self.ln3(x + self.dropout3(self.ffn(x)))\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "78c5e19b",
    "metadata": {},
    "outputs": [],
@@ -306,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "7b8c16d4",
    "metadata": {},
    "outputs": [],
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "0b58d713",
    "metadata": {},
    "outputs": [],
@@ -359,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "e33ad17b",
    "metadata": {},
    "outputs": [],
@@ -370,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "bdbf2c1c",
    "metadata": {},
    "outputs": [],
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "b0874623-c80f-45aa-8674-515ee01ec33a",
    "metadata": {},
    "outputs": [],
@@ -390,48 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "c6fe5108-359e-44fc-8ee2-e7cdd7641c45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.0711, -0.6152,  0.4223,  ...,  0.3656, -0.3517, -0.0370],\n",
-       "         [-0.5377, -0.9918,  0.0216,  ...,  0.1270, -0.3319, -0.1089],\n",
-       "         [-0.2526, -0.6880,  0.3245,  ...,  0.1600, -0.0615,  0.2350],\n",
-       "         ...,\n",
-       "         [-0.2414, -0.5746, -0.0323,  ...,  0.1801, -0.3774,  0.4310],\n",
-       "         [-0.4949, -0.7787,  0.2293,  ..., -0.0620, -0.4470, -0.3621],\n",
-       "         [-0.3042, -1.0720,  0.0874,  ...,  0.0015,  0.1012, -0.1951]],\n",
-       "\n",
-       "        [[-0.0166, -0.2788,  0.4079,  ...,  0.3113, -0.5459,  0.1634],\n",
-       "         [-0.4903, -0.4410,  0.2895,  ...,  0.4231, -0.0509,  0.1885],\n",
-       "         [-0.0700, -0.3236,  0.0440,  ...,  0.3583, -0.3248,  0.0256],\n",
-       "         ...,\n",
-       "         [-0.3147, -0.6449,  0.1983,  ...,  0.2528, -0.2204, -0.2431],\n",
-       "         [-0.3188, -0.2395,  0.3373,  ...,  0.2628, -0.6707,  0.0673],\n",
-       "         [-0.1855, -0.3277,  0.6142,  ...,  0.1412, -0.2176, -0.1024]],\n",
-       "\n",
-       "        [[-0.2309, -0.6858,  0.3791,  ..., -0.3192, -0.2855, -0.2490],\n",
-       "         [-0.0558, -1.0183,  0.1854,  ...,  0.2140, -0.1920,  0.2249],\n",
-       "         [-0.1305, -0.6470,  0.1031,  ...,  0.1182, -0.3684, -0.1452],\n",
-       "         ...,\n",
-       "         [-0.3725, -0.7900,  0.5432,  ...,  0.1411, -0.4261, -0.0242],\n",
-       "         [-0.2064, -0.4301,  0.3025,  ...,  0.2822, -0.7673,  0.4266],\n",
-       "         [-0.1425, -0.9322, -0.0290,  ...,  0.0476, -0.4937,  0.2380]],\n",
-       "\n",
-       "        [[-0.2937, -0.3457,  0.3274,  ...,  0.0851, -0.1268, -0.0041],\n",
-       "         [-0.5127, -0.4381,  0.3851,  ...,  0.1309, -0.6191, -0.1704],\n",
-       "         [-0.4864, -0.4919,  0.4706,  ..., -0.0188, -0.6019,  0.2532],\n",
-       "         ...,\n",
-       "         [-0.5353, -0.2051,  0.2675,  ...,  0.3527, -0.4822, -0.0804],\n",
-       "         [-0.1024, -0.3324,  0.2307,  ...,  0.3587, -0.5924, -0.2067],\n",
-       "         [ 0.0209, -0.6087,  0.1310,  ...,  0.1926, -0.5112, -0.2671]]],\n",
-       "       device='cuda:0', grad_fn=<AddBackward0>)"
+       "torch.Size([4, 60, 3000])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,8 +419,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "20f08630-f615-40fc-8fdf-e4e2af1df10c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "567a8d71-637b-42b2-89cf-65a6b4002d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = SummaryWriter('logs/custom_transformer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ca049e4c-3ed5-474b-b4fc-bd4b4dee53fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer.add_graph(t, (src,tgt))\n",
+    "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e49be3b-c99d-4b4e-9217-c4adf513bbcf",
    "metadata": {},
    "outputs": [],
    "source": []
