--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -181,20 +181,20 @@
     "        batch_size, seq_len, d_model = query.shape\n",
     "        q,k,v = self.qw(query), self.kw(key), self.vw(value) # [B, seq_len, d_model]\n",
     "        \n",
-    "        q = q.view(batch_size, -1, self.nheads, self.depth)\n",
-    "        k = k.view(batch_size, -1, self.nheads, self.depth)\n",
-    "        v = v.view(batch_size, -1, self.nheads, self.depth)     # [B, seq_len, nheads, depth]   # d_model = nheads * depth\n",
+    "        q = q.view(batch_size, -1, self.nheads, self.depth)     # [B, seq_len_q, nheads, depth]   # d_model = nheads * depth\n",
+    "        k = k.view(batch_size, -1, self.nheads, self.depth)     # [B, seq_len_k, nheads, depth]\n",
+    "        v = v.view(batch_size, -1, self.nheads, self.depth)     # [B, seq_len_v, nheads, depth]\n",
     "        \n",
-    "        q = q.transpose(-2,-3)\n",
-    "        k = k.transpose(-2,-3)\n",
-    "        v = v.transpose(-2,-3)  # [B, nheads, seq_len, depth]\n",
+    "        q = q.transpose(-2,-3)  # [B, nheads, seq_len_q, depth]\n",
+    "        k = k.transpose(-2,-3)  # [B, nheads, seq_len_k, depth]\n",
+    "        v = v.transpose(-2,-3)  # [B, nheads, seq_len_v, depth]\n",
     "        \n",
-    "        out, attn = scaled_dot_product_attention(q,k,v,attn_mask)   # [B, nheads, seq_len, depth]\n",
+    "        out, attn = scaled_dot_product_attention(q,k,v,attn_mask)   # [B, nheads, seq_len_q, depth]\n",
     "        \n",
-    "        out = out.transpose(-2,-3)  # [B, seq_len, nheads, depth]\n",
+    "        out = out.transpose(-2,-3)  # [B, seq_len_q, nheads, depth]\n",
     "        \n",
-    "        out = out.reshape(batch_size, -1, d_model)  # [B, seq_len, d_model]\n",
-    "        out = self.out_proj(out)     # [B, seq_len, d_model]\n",
+    "        out = out.reshape(batch_size, -1, d_model)  # [B, seq_len_q, d_model]\n",
+    "        out = self.out_proj(out)     # [B, seq_len_q, d_model]\n",
     "        return out, attn"
    ]
   },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "c3489d0e",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "16f3ae37",
    "metadata": {},
    "outputs": [],
@@ -280,16 +280,16 @@
     "        self.dropout3 = nn.Dropout(dp_rate)\n",
     "        self.ln3 = nn.LayerNorm(d_model)\n",
     "    \n",
-    "    def forward(self, x, enc_output, attn_mask=None, padding_mask=None):   # [B, seq_len, d_model]\n",
-    "        x = self.ln1(x + self.dropout1(self.attn1(x,x,x, attn_mask)[0]))\n",
-    "        x = self.ln2(x + self.dropout2(self.attn2(x,enc_output,enc_output, padding_mask)[0]))\n",
+    "    def forward(self, x, enc_output, src_mask=None, tgt_mask=None):   # [B, seq_len, d_model]\n",
+    "        x = self.ln1(x + self.dropout1(self.attn1(x,x,x, tgt_mask)[0]))\n",
+    "        x = self.ln2(x + self.dropout2(self.attn2(x,enc_output,enc_output, src_mask)[0]))\n",
     "        x = self.ln3(x + self.dropout3(self.ffn(x)))\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "78c5e19b",
    "metadata": {},
    "outputs": [],
@@ -297,24 +297,26 @@
     "class TransformerEncoder(nn.Module):\n",
     "    def __init__(self, src_vocab_size, nlayers=6, d_model=512, nheads=8, dp_rate=0.1, activation='relu'):\n",
     "        super().__init__()\n",
+    "        self.d_model = d_model\n",
     "        self.embedding = nn.Embedding(src_vocab_size, d_model)\n",
     "        pos_enc = torch.tensor(positional_encoding(max_seq_len, d_model), requires_grad=False)\n",
     "        self.register_buffer('pos_enc', pos_enc)\n",
     "        self.enc_layers = nn.ModuleList([TransformerEncoderLayer(d_model, nheads, dp_rate, activation)\n",
     "                                         for _ in range(nlayers)])   # repeat encoder layer N times\n",
     "    \n",
-    "    def forward(self, x, attn_mask=None):   # [B, seq_len]\n",
+    "    def forward(self, x, src_mask=None):   # [B, seq_len]\n",
     "        seq_len = x.size(1)\n",
     "        x = self.embedding(x)               # [B, seq_len, d_model]\n",
+    "        x = x * (self.d_model**0.5)\n",
     "        x = x + self.pos_enc[:,:seq_len]\n",
     "        for lyr in self.enc_layers:\n",
-    "            x = lyr(x, attn_mask)\n",
+    "            x = lyr(x, src_mask)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "7b8c16d4",
    "metadata": {},
    "outputs": [],
@@ -322,24 +324,26 @@
     "class TransformerDecoder(nn.Module):\n",
     "    def __init__(self, tgt_vocab_size, nlayers=6, d_model=512, nheads=8, dp_rate=0.1, activation='relu'):\n",
     "        super().__init__()\n",
+    "        self.d_model = d_model\n",
     "        self.embedding = nn.Embedding(tgt_vocab_size, d_model)\n",
     "        pos_enc = torch.tensor(positional_encoding(max_seq_len, d_model), requires_grad=False)\n",
     "        self.register_buffer('pos_enc', pos_enc)\n",
     "        self.dec_layers = nn.ModuleList([TransformerDecoderLayer(d_model, nheads, dp_rate, activation)\n",
     "                                         for _ in range(nlayers)])   # repeat decoder layer N times\n",
     "    \n",
-    "    def forward(self, x, enc_output, attn_mask=None, padding_mask=None):   # [B, seq_len]\n",
+    "    def forward(self, x, enc_output, src_mask=None, tgt_mask=None):   # [B, seq_len]\n",
     "        seq_len = x.size(1)\n",
     "        x = self.embedding(x)              # [B, seq_len, d_model]\n",
+    "        x = x * (self.d_model**0.5)\n",
     "        x = x + self.pos_enc[:,:seq_len]\n",
     "        for lyr in self.dec_layers:\n",
-    "            x = lyr(x, enc_output, attn_mask, padding_mask)\n",
+    "            x = lyr(x, enc_output, src_mask, tgt_mask)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "0b58d713",
    "metadata": {},
    "outputs": [],
@@ -358,16 +362,16 @@
     "            if p.dim() > 1:\n",
     "                nn.init.xavier_uniform_(p)\n",
     "    \n",
-    "    def forward(self, src, tgt, attn_mask=None, padding_mask=None):\n",
-    "        x = self.encoder(src, attn_mask)\n",
-    "        x = self.decoder(tgt, x, attn_mask, padding_mask)\n",
+    "    def forward(self, src, tgt, src_mask=None, tgt_mask=None):   # [B, seq_len]\n",
+    "        x = self.encoder(src, src_mask)\n",
+    "        x = self.decoder(tgt, x, src_mask, tgt_mask)\n",
     "        x = self.fout(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "e33ad17b",
    "metadata": {},
    "outputs": [],
@@ -378,27 +382,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "bdbf2c1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = Transformer(4000, 3000).to(device)"
+    "model = Transformer(4000, 3000).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "b0874623-c80f-45aa-8674-515ee01ec33a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "o = t(src, tgt)"
+    "o = model(src, tgt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "c6fe5108-359e-44fc-8ee2-e7cdd7641c45",
    "metadata": {},
    "outputs": [
@@ -408,7 +412,7 @@
        "torch.Size([4, 60, 3000])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,39 +423,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "20f08630-f615-40fc-8fdf-e4e2af1df10c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.tensorboard import SummaryWriter"
+    "# from torch.utils.tensorboard import SummaryWriter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "567a8d71-637b-42b2-89cf-65a6b4002d64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer = SummaryWriter('logs/custom_transformer')"
+    "# writer = SummaryWriter('logs/custom_transformer')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "ca049e4c-3ed5-474b-b4fc-bd4b4dee53fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer.add_graph(t, (src,tgt))\n",
-    "writer.close()"
+    "# writer.add_graph(model, (src,tgt))\n",
+    "# writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e533ae4b-50cb-4047-8452-25e2b1bb6f6a",
+   "metadata": {},
+   "source": [
+    "# Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4e49be3b-c99d-4b4e-9217-c4adf513bbcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchtext\n",
+    "from torchtext.utils import download_from_url, extract_archive\n",
+    "from torchtext.data.utils import get_tokenizer\n",
+    "from torchtext.vocab import Vocab\n",
+    "\n",
+    "from collections import Counter\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "45c1c302-be9d-4462-bdb6-82e2954076e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_base = 'https://raw.githubusercontent.com/multi30k/dataset/master/data/task1/raw/'\n",
+    "train_urls = ('train.de.gz', 'train.en.gz')\n",
+    "val_urls = ('val.de.gz', 'val.en.gz')\n",
+    "test_urls = ('test_2016_flickr.de.gz', 'test_2016_flickr.en.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "23cbb064-40dc-4397-9357-61e001578c9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_filepaths = [extract_archive(download_from_url(url_base + url))[0] for url in train_urls]\n",
+    "val_filepaths = [extract_archive(download_from_url(url_base + url))[0] for url in val_urls]\n",
+    "test_filepaths = [extract_archive(download_from_url(url_base + url))[0] for url in test_urls]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ebc90d83-7045-4ebb-ba43-6683cfd4632e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/archer/machine_learning/transformers_pytorch/.data/train.de',\n",
+       " '/home/archer/machine_learning/transformers_pytorch/.data/train.en']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_filepaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4f423660-860c-444a-8c89-162e3d3f3fb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "de_tokenizer = get_tokenizer('spacy', language='de_core_news_sm')\n",
+    "en_tokenizer = get_tokenizer('spacy', language='en_core_web_sm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "beba9675-b8dd-49f4-8e49-0212aab3ae3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_vocab(filepath, tokenizer):\n",
+    "    counter = Counter()\n",
+    "    with io.open(filepath, encoding=\"utf8\") as f:\n",
+    "        for string_ in f:\n",
+    "            counter.update(tokenizer(string_))\n",
+    "    return Vocab(counter, specials=['<unk>', '<pad>', '<bos>', '<eos>'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6f5292c6-83e7-41eb-aa52-6a665b6ae84b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "de_vocab = build_vocab(train_filepaths[0], de_tokenizer)\n",
+    "en_vocab = build_vocab(train_filepaths[1], en_tokenizer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e49be3b-c99d-4b4e-9217-c4adf513bbcf",
+   "id": "454d415a-6d07-4609-97b4-f30aee7ced19",
    "metadata": {},
    "outputs": [],
    "source": []
